2009-04-01 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/edict_file.rb: 
    A line in a standard EDICT file should be:
   
    word [reading] /meanings/

    but in UTF-8 CEDICT files, it is:

    word-traditional word-simplified [reading] /meanings/

    Fixed to support CEDICT as well.

    * test/test_edict_file.rb: Added test-case for CEDICT.
    * test/data/cedict_ts.u8: Test data. 

2009-04-01 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/source_base.rb: Changed default source to dictd file.

2009-03-27 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/google_translate.rb: Updated to handle new
    languages supported by Google Translate. The language list is hardcoded so
    that a request to Google is not necessary. (This list is assumed to change
    rarely)

2009-03-24 Mathieu Blondel <mblondel@svn.gnome.org>

    * release 1.0-beta7

2009-02-03 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/dictzip.rb: Added Dictzip#path.
    * lib/fantasdic/sources/dictd_file.rb: Handles the case when a match is
    found in the index but the definition can't be reached in the dictionary.

2009-01-18 Mathieu Blondel <mblondel@svn.gnome.org>

    * test/test_utils.rb: More complete test for hiragana? and katakana?.

2009-01-08 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/result_text_view.rb: Support for image tags.
    * lib/fantasdic/sources/epwing_dictionary.rb: Support for images and gaiji.

2009-01-07 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb:
    * lib/fantasdic/ui/result_text_view.rb:
    * data/fantasdic/ui/menus.xml: Added buttons to directly jump to a
    definition or a database.

2009-01-07 Mathieu Blondel <mblondel@svn.gnome.org>
    
    * lib/fantasdic/sources/epwing_dictionary.rb: Early support for EPWING
    dictionaries. This is a very popular format in Japan. The source requires